--- a/GPT2_Transformer.ipynb
+++ b/GPT2_Transformer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "94f3cfb7",
+   "id": "c3431957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f9ed9acb",
+   "execution_count": 6,
+   "id": "1fa653ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d29a7f43",
+   "execution_count": 2,
+   "id": "3fe13cb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c3f9acef",
+   "execution_count": 3,
+   "id": "f859ff0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,8 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1dd34215",
+   "execution_count": 4,
+   "id": "5bb48efe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "56cbad99",
+   "execution_count": 7,
+   "id": "b4d6235c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,214 +192,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7b1a1f5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class GPTModel(nn.Module):\n",
-    "    def __init__(self, cfg):\n",
-    "        super().__init__()\n",
-    "        self.tok_emb = nn.Embedding(cfg[\"vocab_size\"], cfg[\"emb_dim\"])\n",
-    "        self.pos_emb = nn.Embedding(cfg[\"context_length\"], cfg[\"emb_dim\"])\n",
-    "        self.drop_emb = nn.Dropout(cfg[\"drop_rate\"])\n",
-    "        \n",
-    "        self.trf_blocks = nn.Sequential(\n",
-    "            *[TransformerBlock(cfg) for _ in range(cfg[\"n_layers\"])])\n",
-    "        \n",
-    "        self.final_norm = LayerNorm(cfg[\"emb_dim\"])\n",
-    "        self.out_head = nn.Linear(\n",
-    "            cfg[\"emb_dim\"], cfg[\"vocab_size\"], bias=False\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, in_idx):\n",
-    "        batch_size, seq_len = in_idx.shape\n",
-    "        tok_embeds = self.tok_emb(in_idx)\n",
-    "        pos_embeds = self.pos_emb(torch.arange(seq_len, device=in_idx.device))\n",
-    "        x = tok_embeds + pos_embeds  # Shape [batch_size, num_tokens, emb_size]\n",
-    "        x = self.drop_emb(x)\n",
-    "        x = self.trf_blocks(x)\n",
-    "        x = self.final_norm(x)\n",
-    "        logits = self.out_head(x)\n",
-    "        return logits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ffd4afdf",
+   "execution_count": 8,
+   "id": "6274f95c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input batch:\n",
-      " tensor([[6109, 3626, 6100,  345],\n",
-      "        [6109, 1110, 6622,  257]])\n",
-      "\n",
-      "Output shape: torch.Size([2, 4, 50257])\n",
-      "tensor([[[ 0.3613,  0.4223, -0.0711,  ...,  0.3483,  0.4661, -0.2838],\n",
-      "         [-0.1792, -0.5660, -0.9485,  ...,  0.0477,  0.5181, -0.3168],\n",
-      "         [ 0.7120,  0.0332,  0.1085,  ...,  0.1018, -0.4327, -0.2553],\n",
-      "         [-1.0076,  0.3418, -0.1190,  ...,  0.7195,  0.4023,  0.0532]],\n",
-      "\n",
-      "        [[-0.2564,  0.0900,  0.0335,  ...,  0.2659,  0.4454, -0.6806],\n",
-      "         [ 0.1230,  0.3653, -0.2074,  ...,  0.7705,  0.2710,  0.2246],\n",
-      "         [ 1.0558,  1.0318, -0.2800,  ...,  0.6936,  0.3205, -0.3178],\n",
-      "         [-0.1565,  0.3926,  0.3288,  ...,  1.2630, -0.1858,  0.0388]]],\n",
-      "       grad_fn=<UnsafeViewBackward0>)\n"
+      "Input shape: torch.Size([2, 4, 768])\n",
+      "Output shape: torch.Size([2, 4, 768])\n"
      ]
     }
    ],
    "source": [
-    "torch.manual_seed(123)\n",
-    "model = GPTModel(GPT_CONFIG_124M)\n",
-    "batch =  torch.tensor([[6109, 3626, 6100,  345],\n",
-    "        [6109, 1110, 6622,  257]])\n",
-    "out = model(batch)\n",
-    "print(\"Input batch:\\n\", batch)\n",
-    "print(\"\\nOutput shape:\", out.shape)\n",
-    "print(out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "078773cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of parameters: 163,009,536\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_params = sum(p.numel() for p in model.parameters())\n",
-    "print(f\"Total number of parameters: {total_params:,}\")"
+    "torch.manual_seed(42)  # For reproducibility\n",
+    "x = torch.rand(2,4,768)  # Example input: batch size 2, sequence length 4, embedding size 768\n",
+    "block = TransformerBlock(GPT_CONFIG_124M)\n",
+    "output = block(x)\n",
+    "print(\"Input shape:\", x.shape)\n",
+    "print(\"Output shape:\", output.shape) \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0a45036",
+   "id": "04c6cd3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is because of weight tying, where the output layer uses the same weights as the input embedding layer."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "788726d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of trainable parameters considering weight tying: 124,412,160\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_params_gpt2 = total_params - sum(p.numel() for p in model.out_head.parameters())\n",
-    "print(f\"Number of trainable parameters considering weight tying: {total_params_gpt2:,}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0599ba80",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total size of the model: 621.83 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_size_bytes = total_params * 4 #A\n",
-    "total_size_mb = total_size_bytes / (1024 * 1024) #B\n",
-    "print(f\"Total size of the model: {total_size_mb:.2f} MB\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "d4eaf8e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_text_simple(model, idx, max_new_tokens, context_size):\n",
-    "    # idx is (batch, n_tokens) array of indices in the current context\n",
-    "    for _ in range(max_new_tokens):\n",
-    "        \n",
-    "        # Crop current context if it exceeds the supported context size\n",
-    "        # E.g., if LLM supports only 5 tokens, and the context size is 10\n",
-    "        # then only the last 5 tokens are used as context\n",
-    "        idx_cond = idx[:, -context_size:]\n",
-    "        \n",
-    "        # Get the predictions\n",
-    "        with torch.no_grad():\n",
-    "            logits = model(idx_cond)\n",
-    "        \n",
-    "        # Focus only on the last time step\n",
-    "        # (batch, n_tokens, vocab_size) becomes (batch, vocab_size)\n",
-    "        logits = logits[:, -1, :]  \n",
-    "\n",
-    "        # Apply softmax to get probabilities\n",
-    "        probas = torch.softmax(logits, dim=-1)  # (batch, vocab_size)\n",
-    "\n",
-    "        # Get the idx of the vocab entry with the highest probability value\n",
-    "        idx_next = torch.argmax(probas, dim=-1, keepdim=True)  # (batch, 1)\n",
-    "\n",
-    "        # Append sampled index to the running sequence\n",
-    "        idx = torch.cat((idx, idx_next), dim=1)  # (batch, n_tokens+1)\n",
-    "\n",
-    "    return idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "6f0553b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated indices: tensor([[15496,    11,   314,   716, 27018, 24086, 47843, 30961, 38891, 34320,\n",
-      "          6074, 16187, 32054,  3059]])\n",
-      "Generated text: [[329, 425, 487, 580, 724, 31, 488, 504, 197, 471, 204, 355, 399, 550]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "encoded: [15496, 11, 314, 716] # Example usage of the generate_text_simple function\n",
-    "encoded = torch.tensor([[15496, 11, 314, 716]])  # Example input\n",
-    "generated = generate_text_simple(model, encoded, max_new_tokens=10, context_size=GPT_CONFIG_124M[\"context_length\"])\n",
-    "print(\"Generated indices:\", generated)\n",
-    "print(\"Generated text:\", model.tok_emb.weight[generated].argmax(dim=-1).tolist())"
+    "# as we can see, the input and output shapes are the same, which is expected for a transformer block. as there are 12 of such transformer blocks in the GPT2 model, we can stack them to form the full model.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b59c27b",
+   "id": "529dba26",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# This will produce gibberish text because the model is not trained."
-   ]
+   "source": []
   }
  ],
  "metadata": {
