--- a/GPT2.ipynb
+++ b/GPT2.ipynb
@@ -1146,6 +1146,45 @@
    "id": "38c912d5",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device = torch.device(\"mps\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-3, weight_decay=0.01)\n",
+    "model = GPTModel(GPT_CONFIG_124M).to(device)\n",
+    "checkpoint = torch.load(\"gpt2_model.pth\")\n",
+    "model.load_state_dict(checkpoint[\"model\"])\n",
+    "optimizer.load_state_dict(checkpoint[\"optimizer\"])\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a644f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"How do you get to West Egg\"\n",
+    "encoded = tokenizer.encode(text)\n",
+    "encoded = torch.tensor([encoded]).to(device)  \n",
+    "generated = generate_text_simple(model, encoded, max_new_tokens=50, context_size=GPT_CONFIG_124M[\"context_length\"])\n",
+    "print(\"Generated indices:\", generated)\n",
+    "gen_list = generated[0].cpu().tolist()\n",
+    "decoded = tokenizer.decode(gen_list)\n",
+    "print(\"Generated text:\", decoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c17835e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
